--- a/.osp/project.ini
+++ b/.osp/project.ini
@@ -1,6 +1,6 @@
-[cinema-chaika.local/public/pages]
+[cinema-chaika.local]
 
-public_dir = {base_dir}/pages
+public_dir = {base_dir}/public
 
 php_engine = PHP-8.3
 
